[package]
name = "hyper-tls"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-tls = "0.3.0"
hyper-tls = "0.4.1"
hyper = "0.13.2"
http = "0.2"